mailbox login info removed На ветке master  Изменения, которые будут включены в коммит: 	изменено:      src/main/resources/mailbox.properties

--- a/src/main/resources/mailbox.properties
+++ b/src/main/resources/mailbox.properties
@@ -1,3 +1,5 @@
 mail.server.host=smtp.yandex.ru
 mail.server.port=587
 mail.server.protocol=smtp
+#mail.server.username=????????@???.com
+#mail.server.password=????
