--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,9 @@
         <!-- Groovy -->
         <groovy-all.version>2.4.13</groovy-all.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <oracleHome>
+            ${env.ORACLE_HOME}
+        </oracleHome>
     </properties>
 
     <dependencyManagement>
@@ -337,6 +340,36 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- <plugin>
+                <groupId>com.oracle.adf.plugin</groupId>
+                <artifactId>ojdeploy</artifactId>
+                <version>12.2.1-3-0</version>
+                <configuration>
+                    <ojdeploy>
+                        ${oracleHome}/jdeveloper/jdev/bin/ojdeploy
+                    </ojdeploy>
+                    <workspace>
+                        ${basedir}/../YetAnother.jws
+                    </workspace>
+                    <project>
+                        YetAnother
+                    </project>
+                    <profile>
+                        YetAnother
+                    </profile>
+                    <outputfile>
+                        ${project.build.directory}/${project.build.finalName}.war
+                    </outputfile>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>-->
         </plugins>
     </build>
 </project>
