--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -7,6 +7,7 @@ hibernate.format_sql=true
 hibernate.connection.release_mode=auto
 hibernate.connection.autoReconnect=true
 hibernate.connection.autocommit=true
+#hibernate.hbm2ddl.auto=create
 hibernate.hbm2ddl.auto=create-only
 hibernate.dialect=org.hibernate.dialect.DB2Dialect
 hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
