mail sending disabled regarding services and configs were amended  На ветке master  Изменения, которые будут включены в коммит: 	изменено:      src/main/java/com/enterprise/yetanother/configuration/SpringMailConfig.java 	изменено:      src/main/java/com/enterprise/yetanother/configuration/WebAppConfig.java 	изменено:      src/main/java/com/enterprise/yetanother/services/implementations/EmailServiceImpl.java 	изменено:      src/main/java/com/enterprise/yetanother/services/implementations/FeedbackServiceImpl.java 	изменено:      src/main/java/com/enterprise/yetanother/services/implementations/TicketServiceImpl.java 	изменено:      src/main/java/com/enterprise/yetanother/services/interfaces/EmailService.java 	изменено:      src/main/resources/javamail.properties 	изменено:      src/main/resources/mailbox.properties

--- a/src/main/resources/mailbox.properties
+++ b/src/main/resources/mailbox.properties
@@ -1,5 +1,6 @@
-mail.server.host=smtp.yandex.ru
-mail.server.port=587
+mail.enable=false
+mail.server.host=
+mail.server.port=
 mail.server.protocol=smtp
-#mail.server.username=????????@???.com
-#mail.server.password=????
+mail.server.username=
+mail.server.password=
