--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -5,7 +5,7 @@ hibernate.connection.password=user
 hibernate.connection.release_mode=auto
 hibernate.connection.autoReconnect=true
 hibernate.connection.autocommit=true
-hibernate.hbm2ddl.auto=create-only
+hibernate.hbm2ddl.auto=create
 hibernate.dialect=org.hibernate.dialect.DB2Dialect
 hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 connection.pool_size=1
