--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
 
     <properties>
         <!-- Generic properties -->
-        <java.version>9</java.version>
+        <!-- <java.version>9</java.version> -->
+        <java.version>1.8</java.version>
         <!-- Web -->
         <servlet.version>3.1.0</servlet.version>
         <!-- Spring -->
@@ -293,10 +294,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
-                    <!--<source>1.8</source>-->
-                    <!--<target>1.8</target>-->
+                    <!-- <source>9</source>
+                    <target>9</target>-->
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>UTF-8</encoding>
                     <compilerArgument>-Xlint:all</compilerArgument>
                     <showWarnings>true</showWarnings>
@@ -327,8 +328,8 @@
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>3.9.0</version>
                 <configuration>
-                    <targetJdk>9</targetJdk>
-                    <!--<targetJdk>1.8</targetJdk>-->
+                    <!-- <targetJdk>9</targetJdk>-->
+                    <targetJdk>1.8</targetJdk>
                     <verbose>true</verbose>
                 </configuration>
                 <executions>
@@ -339,37 +340,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <!-- <plugin>
-                <groupId>com.oracle.adf.plugin</groupId>
-                <artifactId>ojdeploy</artifactId>
-                <version>12.2.1-3-0</version>
-                <configuration>
-                    <ojdeploy>
-                        ${oracleHome}/jdeveloper/jdev/bin/ojdeploy
-                    </ojdeploy>
-                    <workspace>
-                        ${basedir}/../YetAnother.jws
-                    </workspace>
-                    <project>
-                        YetAnother
-                    </project>
-                    <profile>
-                        YetAnother
-                    </profile>
-                    <outputfile>
-                        ${project.build.directory}/${project.build.finalName}.war
-                    </outputfile>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>-->
+            </plugin>            
         </plugins>
     </build>
 </project>
