--- a/pom.xml
+++ b/pom.xml
@@ -330,7 +330,7 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
-            <!-- <plugin>
+            <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.4.8.v20171121</version>
@@ -340,7 +340,7 @@
                         <contextPath>/</contextPath>
                     </webApp>
                 </configuration>
-            </plugin>-->
+            </plugin>
             <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
