--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -2,7 +2,8 @@ hibernate.connection.driver_class=org.h2.Driver
 hibernate.connection.url=jdbc:h2:mem:yetanother
 hibernate.connection.username=user
 hibernate.connection.password=user
-hibernate.show_sql=true
+hibernate.show_sql=false
+#hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.connection.release_mode=auto
 hibernate.connection.autoReconnect=true
